<resources>
    <string name="action_settings">Ajustes</string>
    <string name="hello_blank_fragment">hola oscar</string>
    <string name="title_activity_ubicacion">Map</string>
    <string name="sinUbicacion">La ubicación no se encuentra habilitada, verifica y vuelve a intentarlo</string>
    <string name="sinConexion">Sin conexión. Comprueba que la conexión de Datos o Wi-Fi esté activada y vuelve a intentarlo.</string>
    <string name="sinTarjetaSim">Sin Tarjeta SIM. Comprueba que el móvil cuente con una tarjeta SIM y vuelve a intentarlo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="app_name">iNeed</string>
    <string name="title_activity_maps">iNeed</string>
    <string name="hintAutocomplete">¿Que necesitas?</string>
    <string name="pause">Pausa</string>
    <string name="resume">Resume</string>
    <string name="nroFono">8</string>
    <string name="nroPwd">15</string>
    <string name="nroVerificacion">4</string>
    <string name="title_tab0">Tab 0</string>
    <string name="title_tab1">Tab 1</string>
    <string name="title_tab2">Tab 2</string>
    <string-array name="countries_array">
        <item>Alergia/Inmunología</item>
        <item>Anestesiología</item>
        <item>Cardiología</item>
        <item>Medicina de Cuidados Intensivos</item>
        <item>Dermatología</item>
        <item>Medicina de Emergencia</item>
        <item>Endocrinología</item>
        <item>Medicina Familiar</item>
        <item>Gastroenterología</item>
        <item>Genética</item>
        <item>Geriatría</item>
        <item>Hematología/Oncología</item>
        <item>Enfermedades Infecciosas</item>
        <item>Medicina Interna</item>
        <item>Neonatología</item>
        <item>Nefrología</item>
        <item>Neurología</item>
        <item>Neurocirugía</item>
        <item>Obstetricia/Ginecología</item>
        <item>Cirugía Oncológica</item>
        <item>Oftalmología</item>
        <item>Ortopedia</item>
        <item>Otorrinolaringología</item>
        <item>Manejo  del Dolor</item>
        <item>Patología</item>
        <item>Pediatría</item>
        <item>Cirugía Pediátrica</item>
        <item>Cirugía Plástica y Reconstructiva</item>
        <item>Podiatría</item>
        <item>Medicina Preventiva</item>
        <item>Psiquiatría</item>
        <item>Neumología</item>
        <item>Radiología</item>
        <item>Endocrinología Reproductiva</item>
        <item>Reumatología</item>
        <item>Cirugía General</item>
        <item>Cirugía Torácica</item>
        <item>Urología</item>
        <item>Cirugía Vascular</item>
    </string-array>
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_celular">Introduce tu móvil</string>
    <string name="action_sign_in">Registrarse</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="error_invalid_password">No corresponde a un número de celular</string>
    <string name="error_incorrect_password">La contraseña no corresponde</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registra">registra</string>
    <string name="title_activity_captura_numero">capturaNumero</string>
    <string name="title_activity_localizacion">Localizacion</string>
    <string name="title_activity_registra_solicitante">RegistraSolicitante</string>
    <string name="title_activity_sin_conexion">SinConexion</string>
    <string name="sinConexionUbicacion">Volver a intentar</string>
    <string name="activarUbicacion">Su ubicación esta desactivada.\nPor favor active su ubicación, use esta app</string>
    <string name="confUbicacion">Configuración de ubicación</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="registraSolicitantenro">Cuatro dígitos enviados al celular</string>
    <string name="registraSolicitantenom">Nombre completo</string>
    <string name="registraSolicitanteemail">Correo electrónico.</string>
    <string name="registraSolicitantebtn">Siguiente</string>
    <string name="inicioSesion">Registra la contraseña que se \nenvió a tu correo electrónico.</string>
    <string name="inicioSesionpwd">Introduce tu contraseña</string>
    <string name="ntc"><u>No tengo una cuenta</u></string>
    <string name="inicioSesionbtn">Siguiente</string>
    <string name="contentMain">Solicita lo que necesitas \niNeed</string>
    <string name="activityPrincipal">Introduce tu móvil</string>
    <string name="activityPrincipalbtn">Siguiente</string>
    <string name="quieroofrecer">Quiero <b>ofrecer</b> mis servicios</string>
    <string name="quierosolicitar">Quiero <b>solicitar</b> servicios</string>
    <string name="quieroambos">Quiero <b>ofrecer y solicitar</b> servicios</string>
    <string name="soyofertante">Para <b>ofrecer</b> tus servicios registrate haciendo click <b><u>AQUI</u></b>. Después de registrarte introduce tu Móvil. </string>
    <string name="ofertantesQneed">¿Que necesitas?</string>
    <string name="ofertanteslimpiar">Limpiar</string>
    <string name="ofertantesdist">Usa el punto ROJO para definir la distancia</string>
    <string name="ofertantesbtn">Solicítalo</string>
    <string name="ofertantesbtn2">Ver Solicitudes</string>
    <string name="ofertanteerr">No puede volver a la página Web</string>
    <string name="ofertantegrb">Se grabó correctamente el registro!!</string>
    <string name="ofertanteconf">Se confirmó la cita con el Dr.</string>
</resources>