<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:scrollbars="horizontal"
    tools:context="com.ineedserv.ineed.PrincipalActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ineed"
            android:layout_gravity="center"
            android:paddingTop="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ofrecer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quieroofrecer"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/solicitar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quierosolicitar"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/enlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soyofertante"
            android:textColor="@color/rojosuavetexto"
            android:textSize="15dp"
            android:textStyle="italic"
            android:linksClickable="true"
            android:onClick="abreWeb"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:paddingTop="@dimen/text_margin"/>


        <LinearLayout
            android:id="@+id/grupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin">
            <TextView
                android:id="@+id/zipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/celular"
                android:layout_toStartOf="@+id/celular"
                android:text=""
                android:textColor="@color/md_black_1000"
                android:textSize="29dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/celular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/zipCode"
                android:layout_alignBottom="@+id/zipCode"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:hint="@string/activityPrincipal"
                android:inputType="phone"
                android:maxLength="@string/nroFono"
                android:textColorHint="@color/hint_text"
                android:textSize="29dp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEnvio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="inicioSesion"
            android:text="@string/activityPrincipalbtn"
            android:layout_marginTop="20dp"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/fab_margin"/>

    </LinearLayout>


</ScrollView>