<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"

    tools:context="com.ineedserv.ineed.inicioSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ineed"
            android:layout_gravity="center"
            android:paddingTop="30dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="30dp"
            android:text="@string/inicioSesion"
            android:textAlignment="center"
            android:textColor="@color/rojosuavetexto"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/clave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:hint="@string/inicioSesionpwd"
                android:inputType="textPassword"
                android:maxLength="@string/nroPwd"
                android:textColorHint="@color/hint_text"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/btnEnvio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicioSesionbtn"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:onClick="validaClave"/>

            <!---TextView
                android:id="@+id/textoSubrayado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/ntc"
                android:textSize="20dp"
                android:onClick="generaNumero"
                android:textStyle="italic"
                android:textColor="@color/md_blue_A100"/-->


        </LinearLayout>
    </LinearLayout>


</LinearLayout>
